# Nitrate

./: .coveragerc  .dockerignore  .eslintrc.js  .gitignore  .readthedocs.yml  .snyk  .travis.yml  AUTHORS  CHANGELOG.rst  ChangeLog  Dockerfile  Dockerfile-dev  Dockerfile-venv  Intruduction_tcms_module.rst  MANIFEST.in  Makefile  README.rst  VERSION.txt  container-compose.yml  docker-compose-dev.yml  docker-compose.yml  nitrate.spec  pyproject.toml  python-nitrate-tcms.spec  renovate.json  requirements.txt  setup.cfg  setup.py  tox.ini  travis.yml
.github/workflows/: bandit.yaml  codeql.yml  deps.yaml  dev-release.yaml  distribution.yaml  linter.yaml  main.yaml  package-build.yaml  security.yaml  unittests.yaml
container/: Containerfile  Containerfile-worker  README.md
contrib/: Vagrantfile.example
contrib/ansible/testenv/: testenv.yml
contrib/compose/: web_custom_conf.py  worker_custom_conf.py
contrib/conf/: nitrate-httpd.conf  wsgi-venv.conf
contrib/devenv/: devenv.sh  system.sh
contrib/scripts/: adjust_mysql_auth_plugin.sh  build-artifacts-and-publish.sh  default-permissions.py  make-changelog.py  make-release.py  release-notes.tmpl.rst  templatelint.sh
contrib/travis-ci/: Dockerfile  Dockerfile-py36  Dockerfile-py37  README.rst  build-rpm.sh  entrypoint.sh  runtests.sh  testrunner.py
contrib/travis-ci/deployment/: build-rpm.sh  copr-cli.conf.enc  publish-sdist.sh  pypirc.enc  release-image.sh
docker/: Dockerfile  Dockerfile-worker  README.md  dev-start.sh
docker/dev/: Dockerfile  entrypoint.sh
docker/released/: Dockerfile  README.md  entrypoint.sh  init.py  product.py
docs/source/: about.rst  api.rst  authors.rst  bug_reporting.rst  conf.py  configuration.rst  contact.rst  contribution.rst  guide.rst  index.rst  installing_in_rhel.rst  installing_in_virtualenv.rst  report_issue.rst  set_dev_env.rst  set_dev_env_with_vagrant.rst
docs/source/api/: index.rst  issuetracker.rst  testcases.rst  testruns.rst  xmlrpc.rst
docs/source/guide/: index.rst  issuetracker.rst
docs/source/install/: docker.rst  gce.rst  gunicorn.rst  in_rhel.rst  in_virtualenv.rst  index.rst
docs/source/releases/: 4.0.rst  4.1.rst  4.10.rst  4.11.rst  4.12.rst  4.13.rst  4.2.rst  4.3.1.rst  4.3.2.rst  4.3.rst  4.4.rst  4.5.rst  4.6.1.rst  4.6.rst  4.7.1.rst  4.7.2.rst  4.7.rst  4.8.rst  4.9.1.rst  4.9.2.rst  4.9.rst  index.rst
requirements/: base.txt  devel.txt
src/static/js/: advance_search.js  comment.js  createrun.js  deleconfirm.js  footer_at_the_end.js  index.js  management_actions.js  nitrate.attachments.js  nitrate.footer.js  nitrate.testcases.js  nitrate.testplans.js  nitrate.toggledetail.js  profiles.js  report.js  tcms_actions.js  testcase_actions.js  testplan_actions.js  testrun_actions.js
src/static/style/: base.css  nitrate.css  print.css
src/tcms/: __init__.py  celery.py  urls.py  wsgi.py
src/tcms/auth/: __init__.py  admin.py  apps.py  backends.py  forms.py  models.py  social_auths.py  views.py
src/tcms/comments/: __init__.py  admin.py  apps.py  exceptions.py  forms.py  models.py  urls.py  views.py
src/tcms/core/: admin.py  ajax.py  apps.py  context_processors.py  db.py  files.py  mailto.py  middleware.py  raw_sql.py  responses.py  task.py  tcms_router.py  urls.py  utils.py
src/tcms/issuetracker/: admin.py  models.py  services.py  task.py  validators.py
src/tcms/linkreference/: forms.py  models.py  urls.py  views.py
src/tcms/logs/: managers.py  models.py  views.py
src/tcms/management/: admin.py  models.py  urls.py  views.py
src/tcms/plugins_support/: processors.py  signals.py
src/tcms/profiles/: forms.py  models.py  urls.py  views.py
src/tcms/report/: data.py  forms.py  sqls.py  urls.py  views.py
src/tcms/search/: forms.py  order.py  query.py  urls.py  views.py
src/tcms/settings/: common.py  devel.py  product.py  test.py
src/tcms/testcases/: actions.py  admin.py  data.py  fields.py  forms.py  models.py  signals.py  sqls.py  views.py
src/tcms/testplans/: admin.py  forms.py  importer.py  models.py  signals.py  sqls.py  views.py
src/tcms/testruns/: admin.py  ajax.py  data.py  forms.py  (+3 more)
src/templates/: 404.html  500.html  csrf.html  logs_table.html  menu.html  prompt.html  search_content.html  tcms_base.html  tcms_master.html  vertical_menu.html  xmlrpc.html
src/tests/: __init__.py  conftest.py  factories.py  test_auth.py  test_comments.py  test_linkreference.py  test_management.py  test_profile.py  test_report.py  test_search.py
tcms/: __init__.py  urls.py
tcms/core/: ajax.py  apps.py  db.py  files.py  middleware.py  responses.py  task.py
tcms/management/: models.py  tests.py  views.py
tcms/profiles/: models.py  urls.py
tcms/report/: data.py  tests.py  views.py
tcms/search/: forms.py  order.py  tests.py  views.py
tcms/settings/: common.py  devel.py  product.py  test.py
tcms/templates/: menu.html  tcms_base.html  xmlrpc.html
tcms/testcases/: data.py  forms.py  models.py  sqls.py  views.py
tcms/testplans/: actions.py  forms.py  importer.py  models.py  signals.py  tests.py  views.py
tcms/testruns/: ajax.py  data.py  models.py  signals.py  sqls.py  views.py
tcms/tests/: __init__.py  factories.py
tcms/utils/: dict_utils.py
tcms/xmlrpc/: __init__.py  decorators.py  filters.py  serializer.py  sqls.py  utils.py
tests/: __init__.py  conftest.py  test_auth.py  test_comments.py  test_linkreference.py  test_management.py  test_profile.py  test_report.py  test_search.py
tests/core/: test_ajax.py  test_commands.py  test_db.py  test_files.py  test_views.py
tests/data/: cases-to-import.xml
tests/issuetracker/: test_models.py  test_services.py  test_task.py
tests/js/: js-tests.html  test-tcms-actions.js
tests/testcases/: test_forms.py  test_views.py
tests/testplans/: test_models.py  test_signals.py  test_views.py
tests/testruns/: test_models.py  test_serializer.py  test_views.py
tests/xmlrpc/: test_decorators.py  test_filters.py  test_testbuild.py  test_testcase.py  test_testcaseplan.py  test_testcaserun.py  test_testplan.py  test_testrun.py  test_user.py  test_utils.py  test_version.py  utils.py
(+515 files in other folders)
