[metadata]
name = nitrate-tcms
version = file: VERSION.txt
description = A full-featured Test Case Management System
long_description = file: README.rst
author = Nitrate Team
maintainer = Chenxiong Qi
maintainer_email = qcxhome@gmail.com
url = https://github.com/Nitrate/Nitrate
license = GPLv2+
keywords = test, case, plan, run
platforms =
    any
classifiers =
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
project_urls =
    Issue Tracker = https://github.com/Nitrate/Nitrate/issues
    Source Code = https://github.com/Nitrate/Nitrate
    Documentation = https://nitrate.readthedocs.io/
    RPM Package = https://copr.fedorainfracloud.org/coprs/cqi/python-nitrate-tcms/
    Release Notes = https://nitrate.readthedocs.io/en/latest/releases/
    Container Images = https://quay.io/organization/nitrate

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9
install_requires =
    beautifulsoup4 >= 4.1.1
    django >=3.2,<4
    django-contrib-comments
    django-tinymce
    django-uuslug
    html2text
    odfpy >= 0.9.6
    xmltodict
    kobo
package_dir=
    =src
packages = find:

[options.packages.find]
exclude =
    test*
where = src

[options.extras_require]
mysql = mysqlclient==2.0.3
pgsql = psycopg2-binary==2.9.1
krbauth = kerberos==1.3.0
bugzilla = python-bugzilla
socialauth = social-auth-app-django==5.0.0
async = celery==5.2.3
docs =
    Sphinx >= 1.1.2
    sphinx_rtd_theme
devtools =
    black
    django-debug-toolbar
    django-stubs
    tox
tests =
    beautifulsoup4
    coverage
    factory_boy
    flake8
    pytest
    pytest-cov
    pytest-django
    sqlparse
    tox
    tox-docker>=2.0.0

[tool:pytest]
DJANGO_SETTINGS_MODULE = tcms.settings.test
python_files = test_*.py

# This magic value causes py.test does not collect arbitrary classes, like
# Nitrate's TestCase, TestPlan, and TestRun, that are wrongly treated as tests.
# This value lets py.test only collect classes that is derived from either
# django.test.TestCase or unittest.TestCase
# So, if anyone writes a test class with a name including this string, it is
# incorrect.
# Refer to http://doc.pytest.org/en/latest/customize.html#confval-python_classes
python_classes = *xxxxxxxxx*

addopts = --cov=src/tcms/ --cov-report=term --cov-report=html

[isort]
profile = black
; Keep this same as the black
line_length = 100
extend_skip = migrations

[mypy]
plugins = mypy_django_plugin.main
ignore_missing_imports = True

[mypy.plugins.django-stubs]
django_settings_module = tcms.settings.devel
